--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
-    "mocha":"^1.12"
+    "mocha":"^1.12",
+    "sqlite3":"^2.2.3",
+    "opendatabase":"^0.2"
   }
 }
