--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,12 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.11-nightly-362"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.12-nightly-485"
   },
   "dependencies": {
     "chartjs": "~0.2.0"
+  },
+  "resolutions": {
+    "collide": "1.0.0-beta.3"
   }
 }
