--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,10 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.12-nightly-485"
   },
   "dependencies": {
-    "chartjs": "~0.2.0"
+    "chartjs": "~0.2.0",
+    "pikaday": "1.3.0"
   },
   "resolutions": {
-    "collide": "1.0.0-beta.3"
+    "pikaday": "~1.3.1"
   }
 }
