--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,12 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-rc.1-nightly-1157"
+    "ionic": "driftyco/ionic-bower#1.0.0"
   },
   "dependencies": {
     "chartjs": "~0.2.0"
   },
   "resolutions": {
-    "angular": "1.3.13",
-    "angular-animate": "1.3.13",
-    "angular-sanitize": "1.3.13",
-    "angular-ui-router": "0.2.13"
+    "angular": "1.3.13"
   }
 }
