--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
-    "mocha":"^1.12",
-    "expect.js":"^0.3"
-  }
+    "mocha": "^1.12",
+    "expect.js": "^0.3"
+  },
+  "cordovaPlugins": [
+    {
+      "locator": "https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
+      "id": "cordova-plugin-x-socialsharing"
+    }
+  ],
+  "cordovaPlatforms": []
 }
